# dgen

./: Cargo.toml  LICENSE  README.md  template.json
src/: main.rs
templates/: cra.json
